--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    {
+      "locator": "https://github.com/wymsee/cordova-imagePicker.git",
+      "id": "com.synconset.imagepicker"
+    },
+    "org.apache.cordova.file-transfer"
   ],
   "cordovaPlatforms": [
     "ios"
